--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">ChatAI - ChatGPT Empresarial</h3>
-                            <p class="text-muted mb-0">Saiba de maneira rápida quem são os ofensores de seus indicadores.</p>
+                            <h3 class="h4 mb-2">ChatAI</h3>
+                            <p class="text-muted mb-0">sou o ChatAI, digo pra você quem são seus ofensores, os resultados de seus indicadores, ensino processos de trabalho.</p>
                         </div>
                     </div>
                     <!-- Serviço 2 -->
@@ -84,7 +84,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">VisuAI</h3>
-                            <p class="text-muted mb-0">Eu qualifico e separo imagens.</p>
+                            <p class="text-muted mb-0">Meu nome é VisuAI, eu qualifico e separo imagens.</p>
                         </div>
                     </div>
                 </div>
