--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#about">O que fazemos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Serviços</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Robos</a></li>
                         <!--<li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>-->
                         <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
                     </ul>
@@ -68,7 +68,7 @@
         <!-- Services-->
        <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">Serviços</h2>
+                <h2 class="text-center mt-0">Robos</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <!-- Serviço 1 -->
@@ -84,7 +84,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">VisuAI</h3>
-                            <p class="text-muted mb-0">Meu nome é VisuAI, eu qualifico e separo imagens.</p>
+                            <p class="text-muted mb-0">Meu nome é VisuAI, eu qualifico, separo e crio pastas para suas imagens.</p>
                         </div>
                     </div>
                 </div>
