--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Intelect - IA para empresas</h1>
+                        <h1 class="text-white font-weight-bold">Intellect - IA para empresas</h1>
                         <hr class="divider" />
                         <!--<h3 class="text-white font-weight-bold">Substitua processos manuais por Inteligencia Artificial.</h3>-->
                         
